[package]
name = "mone"
version = "0.1.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.0"
ctrlc = "3.1.2"
libc = "0.2.0"
nix = "0.13.0"
num = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { git = "https://github.com/little-dude/netlink", rev = "2ac0e7d01c" }
