[package]
name = "mone"
version = "0.1.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1.0"
ctrlc = "3.1.2"
failure = "0.1.5"
lazy_static = "1.3.0"
libc = "0.2.0"
nix = "0.13.0"
num = "0.2.0"
slice-deque = "0.2.3"
structopt = "0.2.15"
termion = "1.5.2"
tui = "0.5.1"