[package]
name = "mone"
version = "0.1.2"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
Network monitoring tool written in Rust.
"""
readme = "README.md"
repository = "https://github.com/gky360/mone"
categories = ["network-programming", "command-line-utilities", "visualization"]
keywords = ["network", "monitoring", "tui", "bandwidth", "traffic"]
exclude = ["assets/*", "ci/*", ".travis.yml", ".vscode/*"]

[badges]
travis-ci = { repository = "gky360/mone" }

[dependencies]
cfg-if = "0.1.0"
ctrlc = "3.1.2"
failure = "0.1.5"
libc = "0.2.0"
nix = "0.13.0"
num = "0.2.0"
slice-deque = "0.2.3"
structopt = "0.2.15"
termion = "1.5.2"
tui = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.3.1"
